Cleaner workaround for Guice classpath scanning URL list.